<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regbg">
    <ImageView
        android:src="@drawable/rig_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/email"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmailR" />
    <EditText
        android:inputType="text"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/userN"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtUnameR"
        android:autofillHints="" />
    <EditText
        android:inputType="textPassword"
        android:hint="@string/pass"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPassR" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="90dp"
        android:background="@color/colorPrimary"
        android:text="@string/signup"
        android:textAllCaps="false" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content" />

</LinearLayout>



