<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reglog">
    <ImageView
        android:src="@drawable/rig_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:contentDescription="@string/todo" />
    <Button
        android:text="@string/Sinbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/btnSignin"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:layout_marginTop="100dp"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="90dp"/>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:background="@color/colorPrimary"
        android:text="@string/Supbtn"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>
