<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".HighEndActivity"
    android:background="@drawable/buildbg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="224dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/cpu"
            android:textSize="15sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/intel" />
        </RadioGroup>


    </LinearLayout>



    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/search_mobo_spinner_hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        android:backgroundTint="@color/colorPrimary"
        app:hintText="@string/select_motherboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

    </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/search_cpu_spinner_hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:backgroundTint="@color/colorPrimary"
        app:hintText="@string/select_cpu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

    </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/search_ram_spinner_hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/colorPrimary"
        app:hintText="@string/select_memory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

    </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/search_gpu_spinner_hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/colorPrimary"
        app:hintText="@string/select_gpu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

    </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/search_storage_spinner_hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/colorPrimary"
        app:hintText="@string/select_storage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

    </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/search_casing_spinner_hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:backgroundTint="@color/colorPrimary"
        app:hintText="@string/select_casing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

    </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/search_psu_spinner_hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:backgroundTint="@color/colorPrimary"
        app:hintText="@string/select_psu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

    </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

    <include android:id="@+id/calculate_psu"
        layout="@layout/recommend_psu"/>

</android.support.constraint.ConstraintLayout>