<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logbg">
    <ImageView
        android:src="@drawable/rig_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtUname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="70dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/userN"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/pass"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="90dp"
        android:background="@color/colorPrimary"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
    
    <com.rey.material.widget.CheckBox
        android:id="@+id/ckbRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Material.Drawable.CheckBox"
        android:text="@string/remember_me"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:cbd_strokeColor="@color/colorPrimary"
        app:cbd_tickColor="@color/colorPrimaryDark"
        />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


</LinearLayout>
