<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textviewpsuestimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="250dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/psu_estimation"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPsuEstimation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/watt_value"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="53dp"
        android:gravity="bottom"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_calc_psu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/calculate_watt_psu"
            android:textAllCaps="false" />

    </LinearLayout>
</RelativeLayout>

