<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="55dp">


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="646dp"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="648dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="224dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/cpu"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/intel" />
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/socket"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/socket_spinner"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>


            <!-- START -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/reset_cpu"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/clear"
                    app:srcCompat="@drawable/baseline_autorenew_24"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/cpu"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/select_cpu"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/reset_mobo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/clear"
                    app:srcCompat="@drawable/baseline_autorenew_24"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/mobo"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/select_motherboard"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/reset_ram"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/clear"
                    app:srcCompat="@drawable/baseline_autorenew_24"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/ram"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/select_memory"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/reset_gpu"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/clear"
                    app:srcCompat="@drawable/baseline_autorenew_24"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/gpu"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/select_gpu"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/reset_storage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/clear"
                    app:srcCompat="@drawable/baseline_autorenew_24"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/storage"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/select_storage"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/reset_chassis"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/clear"
                    app:srcCompat="@drawable/baseline_autorenew_24"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/chassis"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/select_casing"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/reset_psu"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/clear"
                    app:srcCompat="@drawable/baseline_autorenew_24"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/psu"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/select_psu"
                    android:textAllCaps="false" />
            </LinearLayout>


        </LinearLayout>

        <include layout="@layout/recommend_psu"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>